# jm_inventory_pos

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  Dockerfile  dev-env.ps1
backend/.sqlx/: query-016c735dccb5041c25a56794448c76cc27c7e9fbbf4149702cb0e97ac0c85740.json  query-02ea9d7d05a38c7698f37d5ee44e2db866a3b5fe46794dd6db515a9b04aa33f9.json  query-046cc936700db5ecfa28ad1351e3e93da25a38aa214fbe6392ff1e07742b1a7b.json  query-04c4de4fd63a4eff5c974ed5de8bb31f4efab47f8f56dc7b51cea875d0a1ce25.json  query-0e02bdcd7ec6b0cff62203edf843dc3a355da13d9b1de4e9ab39131400a530dc.json  query-0e19f6641c50f893607945f50ac1487ea948512d5408f3e550315b8cf48d2100.json  query-0ffd3f93e1d8d8ab3abdba5e920c3e20d7e75abb9b8f05bd43abf175faf42471.json  query-110f1ab61e2198a3cb6476f94d2b097ed56b8067f37f097d31ffb660f99d27da.json  query-149c7066d7007e2bd569bb1ae9b5e263ee42c7d74091fadee7e282151276e552.json  query-1638ec15879b9b78e7d64957dbd89eaa66db896d952d7fa203b66566c259c5e4.json  query-1667f4dd4263bdeada35526d40ca92f01c8f9d26e7cb77ddac34a200b5f88b99.json  query-1839ebfcf75d56667204cf7fa7a7403d19b7fdbf0776a1eb4dd474b6a134d94f.json  query-1fc9b41409c109add335d33f1a1477412eb0133a972c78c2443c028b308576f2.json  query-2057093a5434d4150501cb4bc52528071345af9657298146eff61e4a35a5a13b.json  query-21e0eae752dd207ef1d1ce39eaa5030a853e0bf2e35b9187747ba6f249753c9a.json  query-26b3683c28a857665c096c8eea340807c4a8247fef1689335548c056d485b0c9.json  query-2a79eb23632531c31fcf9a0b1e1524fafa30d11cb719e35307c353efdcec78a5.json  query-2ab74420e78e81d2171cff0b4b1f82d0b324997125e4b2554bcde0abf53943c2.json  (+95 more)
(+137 files in other folders)
